# AccountManagementCpp

./: .gitignore  Account.cpp  Account.hpp  CMakeLists.txt  DayStat.cpp  DayStat.hpp  FileManager.cpp  FileManager.hpp  MonthStat.cpp  MonthStat.hpp  StatAggregator.cpp  StatAggregator.hpp  YearStat.cpp  YearStat.hpp  accounts.txt  main.cpp
tests/: Test.cpp
tools/: install_deps.sh
